--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@
 	box-sizing: border-box;
 }
 
+body {
+	background-color: #f9fafb;
+}
+
 .container {
 	display: flex;
 	flex-direction: column;
@@ -23,6 +27,7 @@
 
 .background-container {
 	position: relative;
+	margin-bottom: 25px;
 }
 
 .background-container .background * {
@@ -51,9 +56,28 @@
 	font-size: clamp(1.5rem, 5vw, 3rem);
 }
 
+.main-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.infomation {
+	font-weight: 600;
+	margin-bottom: 2.5em;
+}
+
+.infomation p:first-child {
+	margin-bottom: 1em;
+}
+
 @media (min-width: 1024px) {
 	.container {
 		flex-direction: row;
+	}
+
+	.background-container {
+		margin-bottom: 0;
 	}
 
 	.background-container .background img {
