--- a/style.css
+++ b/style.css
@@ -14,10 +14,11 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: "Genshin", sans-serif;
 }
 
 body {
-	background-color: #f9fafb;
+	background-color: #efefef;
 }
 
 .container {
@@ -60,15 +61,91 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	flex-grow: 1;
 }
 
 .infomation {
 	font-weight: 600;
-	margin-bottom: 2.5em;
+	margin-bottom: 2em;
+	padding: 0 12px;
+}
+
+.infomation p {
+	font-size: 0.75rem;
 }
 
 .infomation p:first-child {
 	margin-bottom: 1em;
+}
+
+.form-container {
+	background-color: white;
+	padding: 1em 1.5em;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	color: #2f2f3f;
+}
+
+.form-container h2 {
+	font-size: 1.1rem;
+	margin-bottom: 8px;
+}
+
+.form-container ul {
+	list-style: none;
+	display: flex;
+	gap: 24px;
+	flex-wrap: wrap;
+	justify-content: center;
+	width: 100%;
+}
+
+.form-container li {
+	display: flex;
+	flex-direction: column;
+	gap: 2px;
+	width: 45%;
+	min-width: 100%;
+}
+
+.form-container label {
+	font-size: 0.7rem;
+}
+
+.form-container input {
+	border: hsla(0, 0%, 50%, 0.25) solid 1px;
+	border-radius: 3px;
+}
+
+.container-submit {
+	margin-top: 32px;
+	margin-left: 32px;
+}
+
+.container-submit button {
+	color: white;
+	margin-bottom: 32px;
+	padding: 1em 3.5em;
+	background-color: #596d48;
+	border: none;
+	border-radius: 6px;
+	cursor: pointer;
+}
+
+.container-submit p {
+	font-size: .75rem;
+}
+
+.container-submit a {
+	text-decoration: none;
+	color: black;
+}
+
+@media (min-width: 768px) {
+	.form-container li {
+		min-width: unset;
+	}
 }
 
 @media (min-width: 1024px) {
